--- a/Lab_1/index.html
+++ b/Lab_1/index.html
@@ -18,36 +18,34 @@
 </head>
 
 <body>
-	<style type="text/css">
-		html,
-		body,
-		#map {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-		}
-	</style>
-	<div id="map"></div>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	<script src="js/map.js"></script>
-	<script src="js/vendor/modernizr-3.7.1.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script>
-		window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
-	</script>
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
+	<html>
 
-	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-	<script>
-		window.ga = function() {
-			ga.q.push(arguments)
-		};
-		ga.q = [];
-		ga.l = +new Date;
-		ga('create', 'UA-XXXXX-Y', 'auto');
-		ga('set', 'transport', 'beacon');
-		ga('send', 'pageview')
-	</script>
-	<script src="https://www.google-analytics.com/analytics.js" async></script>
-</body></html>
+	<body>
+		<p id="demo">Clique no botão para receber sua localização em Latitude e Longitude:</p>
+		<button onclick="getLocation()">Clique Aqui</button>
+		<script src="js/geolocalizacao.js"></script>
+		<script src="js/vendor/modernizr-3.7.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script>
+			window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')
+
+		</script>
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
+
+		<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+		<script>
+			window.ga = function() {
+				ga.q.push(arguments)
+			};
+			ga.q = [];
+			ga.l = +new Date;
+			ga('create', 'UA-XXXXX-Y', 'auto');
+			ga('set', 'transport', 'beacon');
+			ga('send', 'pageview')
+
+		</script>
+		<script src="https://www.google-analytics.com/analytics.js" async></script>
+	</body>
+
+	</html>
