--- a/Lab_1/index.html
+++ b/Lab_1/index.html
@@ -21,8 +21,10 @@
 	<html>
 
 	<body>
-		<p id="demo">Clique no botão para receber sua localização em Latitude e Longitude:</p>
-		<button onclick="getLocation()">Clique Aqui</button>
+		<div class='main'>
+			<p id="demo">Clique no botão para receber sua localização em Latitude e Longitude:</p>
+			<button onclick="getLocation()">Clique Aqui</button>
+		</div>
 		<script src="js/geolocalizacao.js"></script>
 		<script src="js/vendor/modernizr-3.7.1.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
