Aplicando metodologia OOCSS - Object Oriented CSS

--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -24,7 +24,7 @@
 	<body>
 		<div id='main'>
 			<p id="demo">Clique no botão para receber sua localização em Latitude e Longitude:</p>
-			<button onclick="getLocation()" class='btn'>Clique Aqui</button>
+			<button onclick="getLocation()" class='btn btn-blue'>Clique Aqui</button>
 		</div>
 		<script src="js/geolocalizacao.js"></script>
 		<script src="js/vendor/modernizr-3.7.1.min.js"></script>
